# api/swagger.yml
@@ -51,15 +51,21 @@ paths:
       description: Play a move
       parameters:
         - $ref: '#/parameters/gameId'
+        - in: query
+          name: position
+          description: The position of your move, from 1-9
+          type: integer
       responses:
         200:
           description: The move was played or the game has ended
           schema:
-            type: array
-            items:
-              type: string
+            type: string
         400:
-          description: An invalid move was played
+          description: An invalid move was played, or the game is already completed
+          schema:
+            type: string
+        404:
+          description: The game was not found
           schema:
             type: string
         default:
